@@ -44,6 +44,8 @@ ok(SPVM::TestCase::Net::SSLeay->ASN1_OCTET_STRING);
 
 ok(SPVM::TestCase::Net::SSLeay->ASN1_TIME);
 
+ok(SPVM::TestCase::Net::SSLeay->ASN1_GENERALIZEDTIME);
+
 my $end_memory_blocks_count = $api->get_memory_blocks_count;
 is($end_memory_blocks_count, $start_memory_blocks_count);
 
