@@ -384,4 +384,33 @@ class TestCase::Net::SSLeay {
     return 1;
   }
   
+  static method ASN1_GENERALIZEDTIME : int () {
+    
+    my $object = Net::SSLeay::ASN1_GENERALIZEDTIME->new;
+    
+    unless ($object is_type Net::SSLeay::ASN1_GENERALIZEDTIME) {
+      return 0;
+    }
+    
+    $object->set(1);
+    
+    my $bio = Net::SSLeay::BIO->new;
+    
+    $object->print($bio);
+    
+    my $buffer = (mutable string)new_string_len 256;
+    my $read_length = $bio->read($buffer);
+    Fn->shorten($buffer, $read_length);
+    
+    unless (Fn->contains($buffer, "1970")) {
+      return 0;
+    }
+    
+    unless (Fn->contains($buffer, "00:00:01")) {
+      return 0;
+    }
+    
+    return 1;
+  }
+  
 }
