@@ -17,6 +17,10 @@
     * Add Net::SSLeay::ASN1_TIME#print method.
     * Add Net::SSLeay::ASN1_TIME#to_tm method.
     * Add Net::SSLeay::ASN1_TIME#to_generalizedtime method.
+    * Add Net::SSLeay::ASN1_TIME#new method.
+    * Add Net::SSLeay::ASN1_TIME#set method.
+    * Add Net::SSLeay::ASN1_TIME#check method.
+    * Add Net::SSLeay::ASN1_TIME#print method.
     
   [Bug Fix]
     * Fix bugs that exception messages for SSL are not shown well.
